@@ -23,8 +23,8 @@ public class SimpleResolver implements Resolver {
 /** The default port to send queries to */
 public static final int DEFAULT_PORT = 53;
 
-private InetAddress addr;
-private int port = DEFAULT_PORT;
+private InetSocketAddress address;
+private InetSocketAddress localAddress;
 private boolean useTCP, ignoreTruncation;
 private byte EDNSlevel = -1;
 private TSIG tsig;
@@ -48,10 +48,12 @@ SimpleResolver(String hostname) throws UnknownHostException {
 		if (hostname == null)
 			hostname = defaultResolver;
 	}
+	InetAddress addr;
 	if (hostname.equals("0"))
 		addr = InetAddress.getLocalHost();
 	else
 		addr = InetAddress.getByName(hostname);
+	address = new InetSocketAddress(addr, DEFAULT_PORT);
 }
 
 /**
@@ -67,7 +69,7 @@ SimpleResolver() throws UnknownHostException {
 
 InetSocketAddress
 getAddress() {
-	return new InetSocketAddress(addr, port);
+	return address;
 }
 
 /** Sets the default host (initially localhost) to query */
@@ -78,7 +80,27 @@ setDefaultResolver(String hostname) {
 
 public void
 setPort(int port) {
-	this.port = port;
+	address = new InetSocketAddress(address.getAddress(), port);
+}
+
+public void
+setAddress(InetAddress addr) {
+	address = new InetSocketAddress(addr, address.getPort());
+}
+
+public void
+setAddress(InetSocketAddress addr) {
+	address = addr;
+}
+
+public void
+setLocalAddress(InetSocketAddress addr) {
+	localAddress = addr;
+}
+
+public void
+setLocalAddress(InetAddress addr) {
+	localAddress = new InetSocketAddress(addr, 0);
 }
 
 public void
@@ -183,8 +205,9 @@ maxUDPSize(Message query) {
 public Message
 send(Message query) throws IOException {
 	if (Options.check("verbose"))
-		System.err.println("Sending to " + addr.getHostAddress() +
-				   ":" + port);
+		System.err.println("Sending to " +
+				   address.getAddress().getHostAddress() +
+				   ":" + address.getPort());
 
 	if (query.getHeader().getOpcode() == Opcode.QUERY) {
 		Record question = query.getQuestion();
@@ -200,7 +223,6 @@ send(Message query) throws IOException {
 	byte [] out = query.toWire(Message.MAXLENGTH);
 	int udpSize = maxUDPSize(query);
 	boolean tcp = false;
-	SocketAddress sa = new InetSocketAddress(addr, port);
 	long endTime = System.currentTimeMillis() + timeoutValue;
 	do {
 		byte [] in;
@@ -208,9 +230,11 @@ send(Message query) throws IOException {
 		if (useTCP || out.length > udpSize)
 			tcp = true;
 		if (tcp)
-			in = TCPClient.sendrecv(sa, out, endTime);
+			in = TCPClient.sendrecv(localAddress, address, out,
+						endTime);
 		else
-			in = UDPClient.sendrecv(sa, out, udpSize, endTime);
+			in = UDPClient.sendrecv(localAddress, address, out,
+						udpSize, endTime);
 
 		/*
 		 * Check that the response is long enough.
@@ -283,8 +307,7 @@ sendAsync(final Message query, final ResolverListener listener) {
 private Message
 sendAXFR(Message query) throws IOException {
 	Name qname = query.getQuestion().getName();
-	SocketAddress sockaddr = new InetSocketAddress(addr, port);
-	ZoneTransferIn xfrin = ZoneTransferIn.newAXFR(qname, sockaddr, tsig);
+	ZoneTransferIn xfrin = ZoneTransferIn.newAXFR(qname, address, tsig);
 	xfrin.setTimeout(getTimeout());
 	try {
 		xfrin.run();
